Foi implementado funcao para o dispositivo e categoria, que tratam os erros que podem ocorrer nas requisicoes
