# back-end/src/routes/CategoryRouter.js
@@ -2,8 +2,7 @@ const express = require('express');
 const status = require('http-status-codes');
 
 const { createCategory, listAllCategory, deleteCategory } = require('../controller/CategoryController');
-const { categoryExists } = require('../middlewares/CategoryExists');
-const { fieldValidCategory } = require('../middlewares/FieldValidCategory');
+const { fieldValidCategory, categoryExists, categoryNotFound } = require('../middlewares/CategoryExceptionHandler');
 
 const router = express.Router();
 
@@ -11,7 +10,7 @@ router.get("/", listAllCategory);
 
 router.post("/create", fieldValidCategory, categoryExists, createCategory);
 
-router.delete("/delete/:id", deleteCategory);
+router.delete("/delete/:id", categoryNotFound, deleteCategory);
 
 router.use((err, _req, res, _next) => {
     res.status(status.INTERNAL_SERVER_ERROR).send( { error: `Error! ${err.message}` });
