# back-end/src/routes/DeviceRouter.js
@@ -2,7 +2,7 @@ const express = require('express');
 const status = require('http-status-codes');
 
 const { listAllDevices, listAllDevicesFilter, createDevice, deleteDevice } = require('../controller/DeviceController');
-const { fieldValidDevice } = require('../middlewares/FieldValidDevice');
+const { fieldValidDevice, deviceNotFound } = require('../middlewares/DeviceExceptionHandler');
 
 const router = express.Router();
 
@@ -12,7 +12,7 @@ router.post("/create", fieldValidDevice, createDevice);
 
 router.get("/:id", listAllDevicesFilter);
 
-router.delete("/delete/:id", deleteDevice);
+router.delete("/delete/:id", deviceNotFound, deleteDevice);
 
 router.use((err, _req, res, _next) => {
     res.status(status.INTERNAL_SERVER_ERROR).send( { error: `Error! ${err.message}` });
